practice/05-Terraform-Loops-MetaArguments-SplatOperator/c5-ec2instance.tf
resource "aws_instance" "myP-05_l_M" {
    ami = ""
    key_name = ""
    user_data = ""
    instance_type = ""
    vpc_security_group_ids = ""
    tags = {
      Name = "Demo"
    }

    
  
}
